# kathputli

./: .gitignore  Cargo.toml  README.md  crap-baseline.json  justfile  release.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-24-actor-system-supervision.md
docs/superpowers/specs/: 2026-06-24-actor-system-supervision-design.md
kathputli/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
kathputli/src/: actor.rs  actor_ref.rs  context.rs  envelope.rs  handle.rs  id.rs  lib.rs  pool.rs  registry.rs  stats.rs  status.rs  supervisor.rs
kathputli/tests/: prop_tests.rs  test_handle.rs  test_pool.rs  test_registry.rs  test_stats.rs  test_system.rs
